# hc_malloc

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  SHA1SUMS
doc/: README.md
doc/.notes/: TODO.txt  general_notes.txt  install_sequence.txt  lib_location_notes.txt  reset.sh
doc/html/: hc_malloc.html
doc/man/: hc_malloc.3  hc_realloc.3
include/hc_malloc/: hc_malloc.h
src/: hc_malloc.c
tests/: CMakeLists.txt  test_hc_malloc.c
